# Groks_gegl-gegl_only_experiment

./: README.md
one_node_plugin_example/: build.ninja  meson.build  smooth.c
